Additional card spacers for zoomed out views. Increased min card width to avoid tag wrapping.

--- a/static/styles/portfolio.css
+++ b/static/styles/portfolio.css
@@ -79,7 +79,7 @@ body {
     text-align: left;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 52.5rem) {
     #projects {
         flex-direction: column;
         align-items: stretch;
@@ -93,7 +93,7 @@ body {
 .project {
     position: relative;
     flex: 1 1 20%;
-    min-width: 17rem;
+    min-width: 23rem;
     max-width: 30rem;
     padding: 0.7rem;
     margin: 0.5rem;
